--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
     <div class="page-body">
         <img src="https://lh3.googleusercontent.com/u/0/d/1gxtSai07N0Zqn5KLvsml_VwDCB98ywA9" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
-        <a href="https://drive.google.com/file/d/1hshg77eBdx4obRLJyCBj77wzaM5m6ucg/view?usp=drive_link" class="nav-link btn-home" title="Inicio"></a>
-        <a href="activities.html" class="nav-link btn-activities"></a>
-        <a href="https://github.com/JLuisRD/My-Town/blob/main/activities.html" class="nav-link btn-activities" title="Activities"></a>
+        <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
+        <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
         <a href="Accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
         <a href="Events.html" class="nav-link btn-events" title="Events"></a>
         <a href="Food.html" class="nav-link btn-food" title="Food"></a>
@@ -72,5 +71,6 @@
     </footer>
 
 </body>
+
 
 
