--- a/Activities.html
+++ b/Activities.html
@@ -58,8 +58,8 @@
     <div class="page-body">
         <img src="https://lh3.googleusercontent.com/u/0/d/1YwWcxf5W4wYdzdA4XJkZIVDhEHn3FcXO" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
-        <a href="https://drive.google.com/file/d/1hshg77eBdx4obRLJyCBj77wzaM5m6ucg/view?usp=drive_link" class="nav-link btn-home" title="Inicio"></a>
-        <a href="https://drive.google.com/file/d/1QZq983ncQwYsGAFOfq88uGYs4lYE_Oiw/view?usp=sharing" class="nav-link btn-activities" title="Activities"></a>
+        <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
+        <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
         <a href="accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
         <a href="events.html" class="nav-link btn-events" title="Events"></a>
         <a href="food.html" class="nav-link btn-food" title="Food"></a>
@@ -69,5 +69,6 @@
     <footer>
         <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
     </footer>
+
 
 </body>
