--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         /* Ajuste de coordenadas en porcentajes sobre la imagen principal */
-        .btn-home { top: 2%; left: 6%; width: 6%; height: 10%; }
+        .btn-home { top: 4%; left: 6%; width: 5%; height: 8%; }
         .btn-activities { top: 4%; left: 18%; width: 10%; height: 6%; }
         .btn-accommodation { top: 4%; left: 30%; width: 14%; height: 6%; }
         .btn-events { top: 4%; left: 47%; width: 8%; height: 6%; }
@@ -56,7 +56,7 @@
 <body>
 
     <div class="page-body">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1gxtSai07N0Zqn5KLvsml_VwDCB98ywA9" alt="Pedro Escobedo: The Heart of Grain and Stone">
+        <img src="home.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
@@ -71,6 +71,7 @@
     </footer>
 
 </body>
+
 
 
 
