--- a/activities.html
+++ b/activities.html
@@ -36,7 +36,7 @@
         }
 
         /* Ajuste de coordenadas en porcentajes sobre la imagen principal */
-        .btn-home { top: 2%; left: 6%; width: 6%; height: 10%; }
+        .btn-home { top: 4%; left: 6%; width: 6%; height: 10%; }
         .btn-activities { top: 4%; left: 18%; width: 10%; height: 6%; }
         .btn-accommodation { top: 4%; left: 30%; width: 14%; height: 6%; }
         .btn-events { top: 4%; left: 47%; width: 8%; height: 6%; }
@@ -56,7 +56,7 @@
 <body>
 
     <div class="page-body">
-        <img src="https://lh3.googleusercontent.com/u/0/d/1YwWcxf5W4wYdzdA4XJkZIVDhEHn3FcXO" alt="Pedro Escobedo: The Heart of Grain and Stone">
+        <img src="activities.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
@@ -72,3 +72,4 @@
 
 
 </body>
+
