--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
             background-color: #f9f7f2;
             color: #4a4238;
         }
+        footer {
+            background-color: #3e4e3a; /* Verde oscuro como el de tu imagen */
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
@@ -71,6 +78,7 @@
     </footer>
 
 </body>
+
 
 
 
