--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
             background-color: #3e4e3a; /* Verde oscuro como el de tu imagen */
             color: white;
             text-align: center;
-            padding: 20px;
-            margin-top: 40px;
+            padding: 10px 0;
+            margin: 0; /* Eliminamos el margin-top que causaba el hueco */
+            width: 100%;
         }
     </style>
 </head>
@@ -70,6 +71,7 @@
     </footer>
 
 </body>
+
 
 
 
