--- a/activities.html
+++ b/activities.html
@@ -36,20 +36,20 @@
         }
 
         /* Ajuste de coordenadas en porcentajes sobre la imagen principal */
-        .btn-home { top: 4%; left: 6%; width: 6%; height: 10%; }
-        .btn-activities { top: 4%; left: 18%; width: 10%; height: 6%; }
-        .btn-accommodation { top: 4%; left: 30%; width: 14%; height: 6%; }
-        .btn-events { top: 4%; left: 47%; width: 8%; height: 6%; }
-        .btn-food { top: 4%; left: 60%; width: 7%; height: 6%; }
-        .btn-shopping { top: 4%; left: 72%; width: 10%; height: 6%; }
-
-        /* Sección de texto inferior basada en el contenido del folleto */
-        .description-text {
-            padding: 40px 10%;
-            line-height: 1.6;
+        .btn-home { top: 4%; left: 7%; width: 5%; height: 8%; }
+        .btn-activities { top: 7%; left: 19%; width: 7.5%; height: 4%; }
+        .btn-accommodation { top: 7%; left: 31.2%; width: 12%; height: 4%; }
+        .btn-events { top: 7%; left: 48.7%; width: 6%; height: 4%; }
+        .btn-food { top: 7%; left: 62.1%; width: 4.5%; height: 4%; }
+        .btn-shopping { top: 7%; left: 73.9%; width: 7.5%; height: 4%; }
+        
+        footer {
+            background-color: #3e4e3a; /* Verde oscuro como el de tu imagen */
+            color: white;
             text-align: center;
-            background-color: #f9f7f2;
-            color: #4a4238;
+            padding: 5px 0;
+            margin: 0; /* Eliminamos el margin-top que causaba el hueco */
+            width: 100%;
         }
     </style>
 </head>
@@ -60,16 +60,17 @@
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
-        <a href="accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
-        <a href="events.html" class="nav-link btn-events" title="Events"></a>
-        <a href="food.html" class="nav-link btn-food" title="Food"></a>
-        <a href="shopping.html" class="nav-link btn-shopping" title="Shopping"></a>
+        <a href="Accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
+        <a href="Events.html" class="nav-link btn-events" title="Events"></a>
+        <a href="Food.html" class="nav-link btn-food" title="Food"></a>
+        <a href="Shopping.html" class="nav-link btn-shopping" title="Shopping"></a>
     </div>
 
     <footer>
         <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
     </footer>
 
-
 </body>
+
+
 
