--- a/activities.html
+++ b/activities.html
@@ -60,10 +60,10 @@
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
-        <a href="Accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
-        <a href="Events.html" class="nav-link btn-events" title="Events"></a>
-        <a href="Food.html" class="nav-link btn-food" title="Food"></a>
-        <a href="Shopping.html" class="nav-link btn-shopping" title="Shopping"></a>
+        <a href="accommodation.html" class="nav-link btn-accommodation" title="Accommodation"></a>
+        <a href="events.html" class="nav-link btn-events" title="Events"></a>
+        <a href="food.html" class="nav-link btn-food" title="Food"></a>
+        <a href="shopping.html" class="nav-link btn-shopping" title="Shopping"></a>
     </div>
 
     <footer>
@@ -71,6 +71,7 @@
     </footer>
 
 </body>
+
 
 
 
