Update and rename accomodation.html to accommodation.html

--- a/accommodation.html
+++ b/accommodation.html
@@ -61,7 +61,7 @@
 <body>
 
     <div class="page-body">
-        <img src="accomodation.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
+        <img src="accommodation.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
@@ -76,3 +76,4 @@
     </footer>
 
 </body>
+
