--- a/shopping.html
+++ b/shopping.html
@@ -61,7 +61,7 @@
 <body>
 
     <div class="page-body">
-        <img src="shooping.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
+        <img src="shopping.png" alt="Pedro Escobedo: The Heart of Grain and Stone">
 
         <a href="index.html" class="nav-link btn-home" title="Inicio"></a>
         <a href="activities.html" class="nav-link btn-activities" title="Activities"></a>
@@ -74,5 +74,6 @@
     <footer>
         <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
     </footer>
+
 
 </body>
