--- a/accommodation.html
+++ b/accommodation.html
@@ -42,6 +42,9 @@
         .btn-events { top: 7%; left: 48.7%; width: 6%; height: 4%; }
         .btn-food { top: 7%; left: 62.1%; width: 4.5%; height: 4%; }
         .btn-shopping { top: 7%; left: 73.9%; width: 7.5%; height: 4%; }
+        .btn-lira { top: 33.5%; left: 9.5%; width: 17.8%; height: 39.5%; }
+        .btn-sangil { top: 28.5%; left: 34.3%; width: 31.4%; height: 38.5%; }
+        .btn-posada { top: 34%; left: 70%; width: 26.2%; height: 38.5%; }
         
         footer {
             background-color: #3e4e3a; /* Verde oscuro como el de tu imagen */
@@ -69,6 +72,9 @@
         <a href="events.html" class="nav-link btn-events" title="Events"></a>
         <a href="food.html" class="nav-link btn-food" title="Food"></a>
         <a href="shopping.html" class="nav-link btn-shopping" title="Shopping"></a>
+        <a href="https://www.turismo.pedroescobedo.gob.mx/listado/exhacienda-la-lira/" target="_blank" class="nav-link btn-lira" title="Hacienda La Lira"></a>
+        <a href="https://hotel-mision-san-gil.h-rez.com/index.htm" target="_blank" class="nav-link btn-sangil" title="Hacienda San Gil"></a>
+        <a href="https://www.turismo.pedroescobedo.gob.mx/listado/posada-de-la-luz/" target="_blank" class="nav-link btn-posada" title="Hotel Posada de la Luz"></a>
     </div>
 
     <footer>
@@ -76,4 +82,5 @@
     </footer>
 
 </body>
+
 
