--- a/events.html
+++ b/events.html
@@ -72,7 +72,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
+        <p>&copy; 2026 Pedro Escobedo - El Corazón del Grano y la Cantera</p>
     </footer>
+
 
 </body>
