--- a/shopping.html
+++ b/shopping.html
@@ -72,8 +72,9 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
+        <p>&copy; 2026 Pedro Escobedo - El Corazón del Grano y la Cantera</p>
     </footer>
 
 
 </body>
+
