--- a/activities.html
+++ b/activities.html
@@ -67,10 +67,11 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Pedro Escobedo - El Corazón de Grano y Cantera</p>
+        <p>&copy; 2026 Pedro Escobedo - El Corazón del Grano y la Cantera</p>
     </footer>
 
 </body>
+
 
 
 
